# ChangeLog for dev-perl/Cgi-Simple
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Cgi-Simple/ChangeLog,v 1.10 2005/01/21 20:12:28 mcummings Exp $

  21 Jan 2005; Michael Cummings <mcummings@gentoo.org>
  Cgi-Simple-0.077.ebuild:
  Unmasking for x86

  29 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

  24 Dec 2004; Yuta SATOH <nigoro@gentoo.org> Cgi-Simple-0.077.ebuild:
  added ~ppc64

*Cgi-Simple-0.077 (04 Dec 2004)

  04 Dec 2004; Michael Cummings <mcummings@gentoo.org>
  +Cgi-Simple-0.077.ebuild:
  New version on CPAN

*Cgi-Simple-0.075 (05 Jun 2004)

  05 Jun 2004; Michael Cummings <mcummings@gentoo.org>
  Cgi-Simple-0.075.ebuild:
  new version on cpan

  24 May 2004; Bryan Østergaard <kloeri@gentoo.org> Cgi-Simple-0.06.ebuild:
  Stable on alpha.

  07 May 2004; Gustavo Zacarias <gustavoz@gentoo.org> Cgi-Simple-0.06.ebuild:
  Stable on sparc

*Cgi-Simple-0.06 (20 Jun 2003)

  20 Jun 2003; Michael Cummings <mcummings@gentoo.org> Cgi-Simple-0.06.ebuild:
  Initial import, fills bug 9992. Ebuild submitted by Brandon Black
  <ph_317@hotmail.com>
