@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Cgi-Simple/Attic/Cgi-Simple-0.077.ebuild,v 1.3 2005/01/21 20:12:28 mcummings Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Cgi-Simple/Attic/Cgi-Simple-0.077.ebuild,v 1.4 2005/01/22 00:51:47 kloeri Exp $
 
 inherit perl-module
 
@@ -11,7 +11,7 @@ HOMEPAGE="http://search.cpan.org/author/JFREEMAN/${P}/"
 
 SLOT="0"
 LICENSE="|| ( Artistic GPL-2 )"
-KEYWORDS="x86 ~amd64 ~ppc ~sparc ~alpha ~ppc64"
+KEYWORDS="x86 ~amd64 ~ppc ~sparc alpha ~ppc64"
 IUSE=""
 
 SRC_TEST="do"
