@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Chart-Math-Axis/Attic/Chart-Math-Axis-0.3.ebuild,v 1.5 2005/01/21 20:25:32 mcummings Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Chart-Math-Axis/Attic/Chart-Math-Axis-0.3.ebuild,v 1.6 2005/01/22 00:49:08 kloeri Exp $
 
 inherit perl-module
 
@@ -10,7 +10,7 @@ HOMEPAGE="http://www.cpan.org/modules/by-authors/id/A/AD/ADAMK/${P}.readme"
 
 SLOT="0"
 LICENSE="|| ( Artistic GPL-2 )"
-KEYWORDS="x86 ~amd64 ~alpha ~hppa ~mips ~ppc ~sparc"
+KEYWORDS="x86 ~amd64 alpha ~hppa ~mips ~ppc ~sparc"
 IUSE=""
 
 SRC_TEST="do"
