@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Chart-Math-Axis
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Chart-Math-Axis/ChangeLog,v 1.10 2005/01/21 20:25:32 mcummings Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Chart-Math-Axis/ChangeLog,v 1.11 2005/01/22 00:49:08 kloeri Exp $
+
+  22 Jan 2005; Bryan Østergaard <kloeri@gentoo.org>
+  Chart-Math-Axis-0.3.ebuild:
+  Stable on alpha.
 
   21 Jan 2005; Michael Cummings <mcummings@gentoo.org>
   Chart-Math-Axis-0.3.ebuild:
